# writeprints-zh

./: .gitignore  LICENSE  mkdocs.yml  pyproject.toml
docs/: features.md  index.md  usage.md
tests/: test_base.py  test_lexical_features.py  test_syntactic_features.py
writeprints_zh/: base.py  syntactic_features.py
writeprints_zh/resources/: bigrams.json  feature_names.json  special_marks.json  trigrams.json  universal_tagset.json
